kube/services/netpolicy/networkpolicy_s3listener_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-s3listener
spec:
  podSelector:
    matchLabels:
      app: s3listener
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: s3listener
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 8000
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: s3listener
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
